--- a/app/package.json
+++ b/app/package.json
@@ -19,14 +19,17 @@
     "@solana/web3.js": "^1.87.6",
     "@supabase/supabase-js": "^2.39.0",
     "@types/uuid": "^10.0.0",
+    "bs58": "^6.0.0",
     "dotenv": "^17.2.3",
     "next": "^16.1.6",
     "prisma": "^5.22.0",
     "react": "^18",
     "react-dom": "^18",
+    "tweetnacl": "^1.0.3",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@types/bs58": "^4.0.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "autoprefixer": "^10.0.1",
