--- a/.github/workflows/anchor.yml
+++ b/.github/workflows/anchor.yml
@@ -31,7 +31,14 @@ jobs:
 
       - name: Install Solana
         run: |
-          sh -c "$(curl -sSfL https://release.solana.com/v${SOLANA_VERSION}/install)"
+          # Use direct tarball download (more reliable than install script)
+          mkdir -p $HOME/.local/share/solana/install/releases/${SOLANA_VERSION}
+          cd $HOME/.local/share/solana/install/releases/${SOLANA_VERSION}
+          curl -fSL "https://github.com/solana-labs/solana/releases/download/v${SOLANA_VERSION}/solana-release-x86_64-unknown-linux-gnu.tar.bz2" -o solana.tar.bz2
+          tar -xjf solana.tar.bz2
+          rm solana.tar.bz2
+          # Create active_release symlink
+          ln -sf $HOME/.local/share/solana/install/releases/${SOLANA_VERSION}/solana-release $HOME/.local/share/solana/install/active_release
           echo "$HOME/.local/share/solana/install/active_release/bin" >> $GITHUB_PATH
 
       - name: Install Anchor
