--- a/.github/workflows/anchor.yml
+++ b/.github/workflows/anchor.yml
@@ -5,61 +5,28 @@ on:
     branches: [main]
   workflow_dispatch:
 
-env:
-  SOLANA_VERSION: 1.18.17
-  ANCHOR_VERSION: 0.30.1
-
 jobs:
   build:
     runs-on: ubuntu-latest
+    container:
+      image: backpackapp/build:v0.30.1
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup Rust
-        uses: dtolnay/rust-toolchain@master
-        with:
-          toolchain: "1.79.0"
-
-      - name: Cache Cargo
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-          key: cargo-${{ hashFiles('**/Cargo.lock') }}
-
-      - name: Install Solana
-        run: |
-          # Use direct tarball download (more reliable than install script)
-          mkdir -p $HOME/.local/share/solana/install/releases/${SOLANA_VERSION}
-          cd $HOME/.local/share/solana/install/releases/${SOLANA_VERSION}
-          curl -fSL "https://github.com/solana-labs/solana/releases/download/v${SOLANA_VERSION}/solana-release-x86_64-unknown-linux-gnu.tar.bz2" -o solana.tar.bz2
-          tar -xjf solana.tar.bz2
-          rm solana.tar.bz2
-          # Create active_release symlink
-          ln -sf $HOME/.local/share/solana/install/releases/${SOLANA_VERSION}/solana-release $HOME/.local/share/solana/install/active_release
-          echo "$HOME/.local/share/solana/install/active_release/bin" >> $GITHUB_PATH
-
-      - name: Install Anchor
-        run: cargo install --git https://github.com/coral-xyz/anchor --tag v${ANCHOR_VERSION} anchor-cli --locked
-
       - name: Verify Tools
         run: |
-          $HOME/.local/share/solana/install/active_release/bin/solana --version
-          $HOME/.cargo/bin/anchor --version
+          solana --version
+          anchor --version
+          rustc --version
 
       - name: Setup Solana Keypair
         run: |
-          export PATH="$HOME/.local/share/solana/install/active_release/bin:$PATH"
           mkdir -p ~/.config/solana
           solana-keygen new --no-bip39-passphrase -o ~/.config/solana/id.json
           solana config set --url devnet
           
       - name: Build Program
-        run: |
-          export PATH="$HOME/.local/share/solana/install/active_release/bin:$HOME/.cargo/bin:$PATH"
-          $HOME/.cargo/bin/anchor build 2>&1 || (echo "Build failed, showing Cargo.lock" && cat Cargo.lock 2>/dev/null || true && exit 1)
+        run: anchor build
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
