--- a/.github/workflows/anchor.yml
+++ b/.github/workflows/anchor.yml
@@ -14,7 +14,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: projectserum/build:v0.29.0
+      image: backpackapp/build:v0.31.0
     steps:
       - uses: actions/checkout@v4
 
