--- a/.github/workflows/anchor.yml
+++ b/.github/workflows/anchor.yml
@@ -20,7 +20,8 @@ jobs:
 
       - name: Setup Rust Toolchain
         run: |
-          rustup default stable
+          rustup install 1.85.0
+          rustup default 1.85.0
           rustc --version
           cargo --version
 
