--- a/.github/workflows/anchor.yml
+++ b/.github/workflows/anchor.yml
@@ -20,8 +20,9 @@ jobs:
 
       - name: Setup Rust Toolchain
         run: |
-          rustup install 1.85.0
-          rustup default 1.85.0
+          # Try to get latest stable (should be 1.85+)
+          rustup update stable
+          rustup default stable
           rustc --version
           cargo --version
 
@@ -31,10 +32,11 @@ jobs:
           solana-keygen new --no-bip39-passphrase -o ~/.config/solana/id.json
           solana config set --url devnet
           
-      - name: Pin problematic deps
+      - name: Pin problematic deps (edition2024 avoiders)
         run: |
           cargo update --precise 1.5.4 -p blake3 || true
           cargo update --precise 1.6.0 -p base64ct || true
+          cargo update --precise 0.3.1 -p constant_time_eq || true
           
       - name: Build Program
         run: anchor build
