--- a/.github/workflows/anchor.yml
+++ b/.github/workflows/anchor.yml
@@ -22,6 +22,12 @@ jobs:
           echo "$HOME/.local/share/solana/install/active_release/bin" >> $GITHUB_PATH
           echo "$HOME/.avm/bin" >> $GITHUB_PATH
           
+      - name: Install Anchor 0.32.0
+        run: |
+          export PATH="$HOME/.local/share/solana/install/active_release/bin:$HOME/.avm/bin:$PATH"
+          avm install 0.32.0
+          avm use 0.32.0
+          
       - name: Verify install
         run: |
           export PATH="$HOME/.local/share/solana/install/active_release/bin:$HOME/.avm/bin:$PATH"
