--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ lto = "fat"
 codegen-units = 1
 
 # Pin problematic crates to pre-edition2024 versions
+# blake3 moved to edition2024 in 1.8.3, so 1.8.2 should work
 [workspace.dependencies]
-blake3 = "=1.5.4"
+blake3 = "=1.8.2"
 constant_time_eq = "=0.3.1"
 base64ct = "=1.6.0"
