--- a/programs/clawdvault/Cargo.toml
+++ b/programs/clawdvault/Cargo.toml
@@ -19,6 +19,7 @@ idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 [dependencies]
 anchor-lang = { version = "0.32.0", features = ["init-if-needed"] }
 anchor-spl = { version = "0.32.0", features = ["token", "associated_token"] }
+solana-security-txt = "1.1"
 
 # Force pre-edition2024 versions
 blake3.workspace = true
