--- a/app/package.json
+++ b/app/package.json
@@ -42,6 +42,7 @@
     "@types/react": "^18",
     "autoprefixer": "^10.4.24",
     "postcss": "^8.5.6",
+    "sharp": "^0.34.5",
     "tailwindcss": "^3.4.19",
     "typescript": "^5"
   }
