--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,7 @@
     "@types/uuid": "^10.0.0",
     "bn.js": "^5.2.2",
     "bs58": "^6.0.0",
+    "decimal.js": "^10.6.0",
     "dotenv": "^17.2.3",
     "jose": "^6.1.3",
     "lightweight-charts": "^4.2.3",
