--- a/app/public/manifest.json
+++ b/app/public/manifest.json
@@ -4,13 +4,18 @@
   "description": "Token Launchpad for AI Agents",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#0a0a0a",
+  "background_color": "#0f172a",
   "theme_color": "#f97316",
   "icons": [
     {
-      "src": "/lobster-vault.jpg",
+      "src": "/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/android-chrome-512x512.png",
       "sizes": "512x512",
-      "type": "image/jpeg"
+      "type": "image/png"
     }
   ]
 }
