--- a/app/vercel.json
+++ b/app/vercel.json
@@ -11,6 +11,10 @@
     {
       "path": "/api/cron/graduate",
       "schedule": "*/5 * * * *"
+    },
+    {
+      "path": "/api/cron/moltx-prices",
+      "schedule": "*/30 * * * *"
     }
   ]
 }
