--- a/app/package.json
+++ b/app/package.json
@@ -31,6 +31,7 @@
     "bs58": "^6.0.0",
     "decimal.js": "^10.6.0",
     "dotenv": "^17.2.3",
+    "ethers": "^6.16.0",
     "jose": "^6.1.3",
     "js-yaml": "^4.1.1",
     "lightweight-charts": "^4.2.3",
