--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
     "@supabase/supabase-js": "^2.39.0",
     "@types/bn.js": "^5.2.0",
     "@types/uuid": "^10.0.0",
+    "@vercel/analytics": "^1.6.1",
     "bn.js": "^5.2.2",
     "bs58": "^6.0.0",
     "decimal.js": "^10.6.0",
