--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,11 @@
   "framework": "nextjs",
   "git": {
     "deploymentEnabled": false
-  }
+  },
+  "crons": [
+    {
+      "path": "/api/cron/heartbeat-candles",
+      "schedule": "*/5 * * * *"
+    }
+  ]
 }
