fix: heartbeat candles every minute with proper USD wicks

--- a/app/vercel.json
+++ b/app/vercel.json
@@ -29,7 +29,7 @@
     },
     {
       "path": "/api/cron/heartbeat-candles",
-      "schedule": "*/5 * * * *"
+      "schedule": "* * * * *"
     }
   ]
 }
