--- a/app/vercel.json
+++ b/app/vercel.json
@@ -8,10 +8,6 @@
   },
   "crons": [
     {
-      "path": "/api/cron/update-sol-price",
-      "schedule": "* * * * *"
-    },
-    {
       "path": "/api/cron/sync-trades",
       "schedule": "* * * * *"
     },
@@ -29,7 +25,7 @@
     },
     {
       "path": "/api/cron/heartbeat-candles",
-      "schedule": "* * * * *"
+      "schedule": "*/5 * * * *"
     }
   ]
 }
