feat: add dev-mode age gate bypass for automated testing (#45)
Adds two ways to bypass the 18+ age gate in development mode:

1. Environment variable: NEXT_PUBLIC_SKIP_AGE_GATE=true
2. Query parameter: ?bypass_age_gate=1

Security:
- Bypass only works in NODE_ENV=development
- Production builds always show the age gate regardless of env vars

Usage:
- Set NEXT_PUBLIC_SKIP_AGE_GATE=true in .env.local for persistent bypass
- Append ?bypass_age_gate=1 to URL for quick one-time bypass

Files modified:
- app/src/components/AgeGate.tsx: Added shouldBypassAgeGate() helper
- app/.env.example: Added documentation for NEXT_PUBLIC_SKIP_AGE_GATE

--- a/app/.env.example
+++ b/app/.env.example
@@ -12,3 +12,6 @@ SOLANA_NETWORK=devnet
 SOLANA_RPC_URL=https://api.devnet.solana.com
 # Platform wallet secret key (base58 encoded) - required for custodial operations
 # PLATFORM_WALLET_SECRET=your-base58-encoded-secret-key
+
+# Development - Skip age gate for automated testing (dev mode only)
+# NEXT_PUBLIC_SKIP_AGE_GATE=true
