refactor: simplify age gate — hidden in dev by default

--- a/app/.env.example
+++ b/app/.env.example
@@ -13,5 +13,6 @@ SOLANA_RPC_URL=https://api.devnet.solana.com
 # Platform wallet secret key (base58 encoded) - required for custodial operations
 # PLATFORM_WALLET_SECRET=your-base58-encoded-secret-key
 
-# Development - Skip age gate for automated testing (dev mode only)
-# NEXT_PUBLIC_SKIP_AGE_GATE=true
+# Development - Show age gate in development mode (default: hidden in dev)
+# Set to true to test the age gate during development
+# NEXT_PUBLIC_SHOW_AGE_GATE=true
