--- a/app/.env.example
+++ b/app/.env.example
@@ -12,3 +12,7 @@ SOLANA_NETWORK=devnet
 SOLANA_RPC_URL=https://api.devnet.solana.com
 # Platform wallet secret key (base58 encoded) - required for custodial operations
 # PLATFORM_WALLET_SECRET=your-base58-encoded-secret-key
+
+# Development - Show age gate in development mode (default: hidden in dev)
+# Set to true to test the age gate during development
+# NEXT_PUBLIC_SHOW_AGE_GATE=true
