fix: rename eslint.config.js to .mjs and fix lint scripts for ESLint v9
- eslint.config.js uses ESM imports but package.json has no type:module
- Renamed to .mjs so ESM works without changing package type
- Removed --ext flag from lint scripts (removed in ESLint v9)

--- a/app/package.json
+++ b/app/package.json
@@ -9,8 +9,8 @@
     "postinstall": "prisma generate",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.32.1",
