--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,24 +14,29 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       
+    - name: Setup pnpm
+      uses: pnpm/action-setup@v4
+      with:
+        version: latest
+
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: '20'
-        cache: 'npm'
-        cache-dependency-path: app/package-lock.json
-        
+        cache: 'pnpm'
+        cache-dependency-path: app/pnpm-lock.yaml
+
     - name: Install dependencies
       working-directory: ./app
-      run: npm ci
-      
+      run: pnpm install --frozen-lockfile
+
     - name: Type check
       working-directory: ./app
-      run: npx tsc --noEmit
-      
+      run: pnpm exec tsc --noEmit
+
     - name: Build Next.js app
       working-directory: ./app
-      run: npm run build
+      run: pnpm run build
       env:
         # Skip env validation for build test
         SKIP_ENV_VALIDATION: true
