--- a/app/package.json
+++ b/app/package.json
@@ -32,13 +32,13 @@
     "@vercel/analytics": "^1.6.1",
     "bn.js": "^5.2.2",
     "bs58": "^6.0.0",
+    "clsx": "^2.1.1",
     "decimal.js": "^10.6.0",
     "dotenv": "^17.2.3",
     "ethers": "^6.16.0",
+    "framer-motion": "^11.18.0",
     "jose": "^6.1.3",
     "js-yaml": "^4.1.1",
-    "clsx": "^2.1.1",
-    "framer-motion": "^11.18.0",
     "lightweight-charts": "^5.1.0",
     "next": "^16.1.6",
     "prisma": "^5.22.0",
@@ -49,6 +49,7 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "^10.0.1",
     "@types/bs58": "^5.0.0",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^20",
